# helena_haffner_epic_events_P12_10012025

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Helper/: jwt_helper.py
control/: controller.py  generic_controller.py  jwt_helper.py  main_controller.py  management_controller.py  sales_controller.py  support_controller.py
flake-report/: index.html
models/: db_models.py  encod_picture.py  models.py  picture_decoding.py  picture_encoding.py  picture_manipulation.py
settings/: settings.py
tests/: conftest.py  mock.py  test_is_quitting.py
tests/functional_tests/: collaborator_test.py  encoding_decoding_token_test.py  main_controller_funct_test.py  management_controller_funct_test.py  sales_controller_funct_test.py  support_controller_funct_test.py
tests/unitary_tests/: generic_controller_test.py  generic_controller_unit_test.py  generic_view_test.py  generic_view_unit_test.py  management_controller_test.py  management_controller_unit_test.py  unwanted_view_unit_test.py
view/: display_obj_view.py  generic_view.py  management_view.py  sales_view.py  support_view.py  unwanted_view.py  view.py
view/role_views/: management_view.py  sales_view.py  support_view.py
